# mpc_comparison

./: .gitignore  .gitmodules  .readthedocs.yml  LICENSE.txt  README.md  README.txt  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: copilot-instructions.md
acados_leg/: leg_spec.py
cpp/: Makefile  README.md
cpp/build_scripts/: compile_xla_runtime.sh  editable_pip.sh  pjrt_cleanup.sh
cpp/src/: mpc_example.cpp  mpc_export.py
docs/: conf.py  cpp.md  index.md  requirements.txt
docs/_static/: style.css
docs/_templates/autosummary/: base.rst
docs/api/: comp.rst  index.rst  mp_mpl.rst  opt.rst  quartic_cost.rst  robo.rst  utils.rst  vest.rst  viz.rst
exp_mpc/acados_leg/: leg_spec.py
exp_mpc/stewart_min/: comp.py  const.py  mp_mpl.py  opt.py  quartic_cost.py  robo.py  spec.py  utils.py  vest.py  viz.py
notebooks/: avx_integrator.ipynb  bvp.ipynb  const_acc.ipynb  cost_analysis.ipynb  cpp_analysis.ipynb  full_sms_ref.ipynb  grid_analysis.ipynb  lqal.ipynb  numerical_comp.ipynb  opt_sms_ref.ipynb  quartic_cost.ipynb  sms_filt.ipynb  sms_ref.ipynb  symbolic_comp.ipynb  vestibular.ipynb
scripts/: gen_sms_path.py  gen_stewart_path.py  grid_opt.py  leg_limits.py  viz_sms_data.py
test/: conftest.py  helpers.py  test_leg_spec.py
