[project]
name = "exp_mpc"
version = "0.1.0"
description = "Experimental mpc computations"
readme = "README.txt"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Brent Koogler", email = "brkhnc@umsystem.edu"},
]
keywords = [
  "MPC",
  "Robotics",
  "Nonlinear programming",
  "Real time",
  "Visualization",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["exp_mpc/*"]

[tool.ruff]
line-length = 80

[tool.pyright]
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportCallIssue = false
reportOperatorIssue = false
